# tic-tac-toc

./: .gitignore  CMakeLists.txt  README.md  tictactok
lib/: jsmn.c
lib/jsmn-master/test/: test_default  test_links  test_strict  test_strict_links
min/: tictactok.c
src/: main.c
src/domain/grid/: Grid.c  Grid.h
src/domain/mark/: Mark.h
src/exposition/cli/: CLI.c  CLI.h
src/exposition/cli/json-action/: json-action.c  json-action.h
src/exposition/cli/json-init/: json-init.c  json-init.h
src/exposition/cli/json-instruction/: json-instruction.c  json-instruction.h
src/exposition/dto/: Init.c  Init.h  Instruction.c  Instruction.h  actions.h
src/exposition/error/: errors.c  errors.h
src/exposition/json/: json.c  json.h
src/utils/: string-utils.c  string-utils.h
tests/: minunit.h
tests/domain/grid/: GridTest.c
tests/exposition/: CliTest.c  InitTest.c
tests/exposition/cli/: CliTest.c
tests/exposition/init/: InitTest.c
tests/lib/jsmn/: jsmnTest.c
